Textes en image supprimés et changement de taille pour respecter aux maximum l'image, changement de couleur du titre de la page 2

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
+				<!-- changer le png-->
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
@@ -85,7 +86,10 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<div style="font-size: 1.5em;color:rgba(0, 0, 0, 0.644);">
+					L'agence La Panthère est une agence web design qui aide<br>
+					les entreprises à devenir attractives et visibles sur le internet.
+				</div>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -125,11 +129,10 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-					<div>
-						"l'agence panthère est une excellente agentce web ! Les web designers ont réussi "
+					<div style="font-size:1.5em;;color:rgba(0, 0, 0, 0.644);">
+						<i>"L'agence panthère est une excellente agentce web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intergralité de notre site. Cela nous a aidé à doubler nos ventes en ligne Lyon."</i><br>
+						<span style="color:#7c7c7c">Maxime Guibard, PDG A vos fourchettes</span>
 					</div>
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
 			</div>
 		</div>
 	</div>
@@ -158,7 +161,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<div style="font-size: 1.5em;;color:rgba(0, 0, 0, 0.644);">
+					Nous travaillons avec beaucoup de clients voici nos réalisations.<br>
+					Voici nos réalisation.
+				</div>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
