Modifications des balises canonicals, modifications des couleurs dans la page 2 et le footer en blanc pour que se soit plus lisible et ajout d'un texte dans le style.css afin d'apporter des modifications futurs si besoin.

--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Contact de l' agence La Panthère">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel= "canonical" href="https://agence-la-panthère.com/pages2.html">
+	<link rel= "canonical" href="https://agence-la-panthère.fr/pages2.html">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -58,12 +58,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center hero-bloc-text tc-white">
-					<div style="color: white;">
-						Parlons web design !
-					</div>
+				<h1 class="text-center hero-bloc-text ltc-white">
+					Parlons web design !
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				<p class="text-center mg-lg ltc-white tight-width-whitespace">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 				</p>
@@ -151,7 +149,7 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+					<div class="keywords" style="color:#FFFFFF;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 			</div>
 		</div>
