Ajustement du responsive tel que les images des résaux sociaux soit en ligne plutot qu'en colone, centrage de certaines images et ajustement de taille, diminution de la taille de certains texte et images.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<div style="font-size: 1.5em;color:rgba(0, 0, 0, 0.644);">
+				<div class="title">
 					L'agence La Panthère est une agence web design qui aide<br>
 					les entreprises à devenir attractives et visibles sur le internet.
 				</div>
@@ -127,9 +127,9 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-					<div style="font-size:1.5em;;color:rgba(0, 0, 0, 0.644);">
+					<div class="title">
 						<i>"L'agence panthère est une excellente agentce web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intergralité de notre site. Cela nous a aidé à doubler nos ventes en ligne Lyon."</i><br>
-						<span style="color:rgba(0, 0, 0, 0.644)">Maxime Guibard, PDG A vos fourchettes</span>
+						Maxime Guibard, PDG A vos fourchettes
 					</div>
 			</div>
 		</div>
@@ -159,7 +159,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<div style="font-size: 1.5em;;color:rgba(0, 0, 0, 0.644);">
+				<div class="title">
 					Nous travaillons avec beaucoup de clients voici nos réalisations.<br>
 					Voici nos réalisation.
 				</div>
@@ -235,22 +235,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" alt="instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" aria-label="instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
