--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<div class="page-container">
+<main class="page-container">
     
 <!-- bloc-0 -->
 <header class="bloc bgc-white l-bloc " id="bloc-0">
@@ -78,14 +78,14 @@
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<div class="title">
+				<h2 class="title">
 					L'agence La Panthère est une agence web design qui aide<br>
 					les entreprises à devenir attractives et visibles sur le internet.
-				</div>
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -93,9 +93,9 @@
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h2 class="mg-md text-center">
+				<h3 class="mg-md text-center">
 					Web design
-				</h2>
+				</h3>
 				<p class="text-center ">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
@@ -104,9 +104,9 @@
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h2 class="mg-md text-center">
+				<h3 class="mg-md text-center">
 					&nbsp;Stratégie
-				</h2>
+				</h3>
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
@@ -115,9 +115,9 @@
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h2 class="mg-md text-center">
+				<h3 class="mg-md text-center">
 					Illustrations
-				</h2>
+				</h3>
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
@@ -125,18 +125,18 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-					<div class="title">
-						<i>"L'agence panthère est une excellente agentce web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intergralité de notre site. Cela nous a aidé à doubler nos ventes en ligne Lyon."</i><br>
-						Maxime Guibard, PDG A vos fourchettes
-					</div>
+					<blockquote class="title">
+						"L'agence panthère est une excellente agentce web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intergralité de notre site. Cela nous a aidé à doubler nos ventes en ligne Lyon."<br>
+						<cite>Maxime Guibard, PDG A vos fourchettes</cite>
+					</blockquote>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
@@ -149,11 +149,11 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<article class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -204,22 +204,22 @@
 			</div>
 		</div>
 	</div>
-</article>
+</section>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
 			<h2 class="mg-md text-center tc-white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
-				<a href="#contact" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
@@ -238,7 +238,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="#"aria-label="facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="#" aria-label="facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
@@ -260,7 +260,7 @@
 
 
 <!-- Principal conteneur END -->
-    
+</main>   
 
 </body>
 </html>
