--- a/page2.html
+++ b/page2.html
@@ -108,7 +108,7 @@
 					</button>
 				</form>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-6 bloc-mob-center-text">
 				<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a>
 				<address>2 place Sathonay 69001 Lyon</address>
 				Ouvert de 9h à 18h, du lundi au vendredi
